# src/main/java/com/lichius/rac/ansbach/altstadtfest/application/model/Ingredient.java
@@ -1,0 +1,39 @@
+package com.lichius.rac.ansbach.altstadtfest.application.model;
+
+import jakarta.persistence.*;
+
+@Entity
+@Table(name = "ingredients")
+public class Ingredient {
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Long id;
+
+    @Column(unique = true, nullable = false)
+    private String name;
+
+    // Konstruktoren
+    public Ingredient() {
+    }
+
+    public Ingredient(String name) {
+        this.name = name;
+    }
+
+    // Getter/Setter
+    public Long getId() {
+        return id;
+    }
+
+    public void setId(Long id) {
+        this.id = id;
+    }
+
+    public String getName() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+}
